--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         body {
             display: flex;
             flex-direction: column;
+            margin: 0px;
         }
 
         .dark-background {
@@ -37,7 +38,6 @@
             font-size: 16px;
             color: #f9faf8;
             font-weight: bold;
-
         }
 
         .header-logo {
@@ -82,30 +82,79 @@
         .top-image {
             flex: 1;
         }
-        .info-img{
-            width:150px;
-            height:150px;
-            border-style:solid;
+
+        .info-img {
+            width: 150px;
+            height: 150px;
+            border-style: solid;
             border-radius: 10px;
-            border-color:#3882f6;
-            border-width: 5px;;
+            border-color: #3882f6;
+            border-width: 5px;
+
         }
 
-        .info-tiles{
-            display:flex;
-            padding:10px 200px;
+        .info-tiles {
+            display: flex;
+            gap: 16px;
+            flex-wrap: wrap;
+            padding: 10px 200px;
+            justify-content: space-evenly;
         }
 
-        .middle1{
-            text-align:center;
+        .info {
+            width: min-content;
         }
 
-        .info-header{
-            padding:50px;
-            color:#1F2937;
+        .middle1 {
+            text-align: center;
+        }
+
+        .info-header {
+            padding: 50px;
+            color: #1F2937;
             font-size: 36px;
-            font-weight:bolder;
+            font-weight: bolder;
         }
+
+        .middle2 {
+            background-color: #e5e7eb;
+            padding: 0px 275px;
+        }
+
+        .quote-text {
+            color: #1F2937;
+            font-style: italic;
+            font-size: 36px;
+        }
+
+        .sign-up {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 40px 125px;
+            margin: 100px 150px;
+            background-color: #3882f6;
+            border-radius: 10px;
+            font-size: 18px;
+            color:white;
+            line-height: 3px;
+        }
+
+        .sign-up button {
+            border-color: white;
+            border-style: solid;
+            height: min-content;
+            flex: 0 0 auto;
+        }
+
+        .footer{
+            padding:50px;
+            text-align: center;
+            background-color: #1F2937;
+            color:white;
+            font-size: 18px;
+        }
+
     </style>
 
 </head>
@@ -128,19 +177,38 @@
                 contrast</div>
             <button class="signup">Sign up</button>
         </div>
-        <div class="top-image">this is a placeholder for an image</div>
+        <div class="top-image"><img width=450px height=250px src="images/pexels-juan-agustin-2340254.jpg"></div>
     </div>
     <div class="middle1">
         <div class="info-header">Some random information</div>
         <div class="info-tiles">
-            <div class="info"><img class="info-img" src="images/pexels-oleg-magni-1005644.jpg"><p>this is some subtext under an illustration or image</p></div>
-            <div class="info"><img class="info-img" src="images/pexels-picjumbocom-196645.jpg"><p>this is some subtext under an illustration or image</p></div>
-            <div class="info"><img class="info-img" src="images/pexels-pixabay-355948.jpg"><p>this is some subtext under an illustration or image</p></div>
-            <div class="info"><img class="info-img" src="images/pexels-oleg-magni-1005644.jpg"><p>this is some subtext under an illustration or image</p></div>
+            <div class="info"><img class="info-img" src="images/pexels-oleg-magni-1005644.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info"><img class="info-img" src="images/pexels-picjumbocom-196645.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info"><img class="info-img" src="images/pexels-pixabay-355948.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info"><img class="info-img" src="images/pexels-oleg-magni-1005644.jpg">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
-    <div class="middle2">"This is a quote.."</div>
-    <div class="sign-up">xyx</div>
+    <div class="middle2">
+        <p class="quote-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
+            space, or maybe people
+            will actually read it. Who knows? All I know is that it looks nice."</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="sign-up">
+        <div class="call-to-action">
+            <p style="font-size:x-large; font-weight: bold;">Call to action! It's time!</p>
+            <p>Sign up for our product by clicking the button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
     <div class="footer">Copyright The .....</div>
 
 </body>
