--- a/index.html
+++ b/index.html
@@ -6,157 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            margin: 0px;
-        }
-
-        .dark-background {
-            background-color: #1F2937;
-        }
-
-        .main-text {
-            font-size: 48px;
-            font-weight: bolder;
-            color: #f9faf8;
-        }
-
-        .secondary-text {
-            color: #e5e7eb;
-            font-size: 18px;
-        }
-
-        button {
-            width: max-content;
-            background-color: #3882f6;
-            padding: 8px 40px;
-            border-radius: 8px;
-            border-style: none;
-            font-size: 16px;
-            color: #f9faf8;
-            font-weight: bold;
-        }
-
-        .header-logo {
-            color: #f9faf8;
-            font-size: 24px;
-            font-weight: bolder;
-        }
-
-        .header {
-            display: flex;
-            justify-content: space-between;
-            color: white;
-            padding: 20px 150px 0px 150px;
-        }
-
-        .header-links {
-            display: flex;
-            gap: 10px;
-        }
-
-        .header-links a {
-            text-decoration: none;
-
-            flex: 0 0 auto;
-
-        }
-
-        .top-content {
-            display: flex;
-            align-items: center;
-            gap: 50px;
-            padding: 100px 150px;
-        }
-
-        .top-left {
-            display: flex;
-            flex-direction: column;
-            flex: 1;
-            gap: 10px;
-        }
-
-        .top-image {
-            flex: 1;
-        }
-
-        .info-img {
-            width: 150px;
-            height: 150px;
-            border-style: solid;
-            border-radius: 10px;
-            border-color: #3882f6;
-            border-width: 5px;
-
-        }
-
-        .info-tiles {
-            display: flex;
-            gap: 16px;
-            flex-wrap: wrap;
-            padding: 10px 200px;
-            justify-content: space-evenly;
-        }
-
-        .info {
-            width: min-content;
-        }
-
-        .middle1 {
-            text-align: center;
-        }
-
-        .info-header {
-            padding: 50px;
-            color: #1F2937;
-            font-size: 36px;
-            font-weight: bolder;
-        }
-
-        .middle2 {
-            background-color: #e5e7eb;
-            padding: 0px 275px;
-        }
-
-        .quote-text {
-            color: #1F2937;
-            font-style: italic;
-            font-size: 36px;
-        }
-
-        .sign-up {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 40px 125px;
-            margin: 100px 150px;
-            background-color: #3882f6;
-            border-radius: 10px;
-            font-size: 18px;
-            color:white;
-            line-height: 3px;
-        }
-
-        .sign-up button {
-            border-color: white;
-            border-style: solid;
-            height: min-content;
-            flex: 0 0 auto;
-        }
-
-        .footer{
-            padding:50px;
-            text-align: center;
-            background-color: #1F2937;
-            color:white;
-            font-size: 18px;
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -200,7 +50,7 @@
         <p class="quote-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
             space, or maybe people
             will actually read it. Who knows? All I know is that it looks nice."</p>
-        <p>-Thor, God of Thunder</p>
+        <p style="text-align: end; font-size: x-large; font-weight: bold;">-Thor, God of Thunder</p>
     </div>
     <div class="sign-up">
         <div class="call-to-action">
