--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="header dark-background">
-        <div class="header-logo">Header Logo</div>
+        <div class="header-logo"><img src="images/pexels-juan-agustin-2340254.jpg" style="width:150px; height:60px;"> Logo</div>
         <div class="header-links">
             <a class="secondary-text" href="#">header link one</a>
             <a class="secondary-text" href="#">header link two</a>
@@ -27,7 +27,7 @@
                 contrast</div>
             <button class="signup">Sign up</button>
         </div>
-        <div class="top-image"><img width=450px height=250px src="images/pexels-juan-agustin-2340254.jpg"></div>
+        <div class="top-image"><img width=450px height=250px src="images/pexels-pixabay-268362.jpg"></div>
     </div>
     <div class="middle1">
         <div class="info-header">Some random information</div>
