fix call to action box

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
     <div class="sign-up">
         <div class="call-to-action">
-            <p style="font-size:x-large; font-weight: bold;">Call to action! It's time!</p>
-            <p>Sign up for our product by clicking the button right over there!</p>
+            <p style="font-size:x-large; font-weight: bold; margin:0px;">Call to action! It's time!</p>
+            <p style="margin:0px">Sign up for our product by clicking the button right over there!</p>
         </div>
         <button>Sign up</button>
     </div>
